# chess-115a

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  board.cpp  board.h  cse115a-notes.txt  main.cpp  temp_tests.txt  vcpkg.json
gui_py/: README.md  requirements.txt
gui_py/src/: UCIEngine.py  chess_board.py  main.py
src/: board.cpp  board.h  constants.h  engine  main.cpp  move_gen.cpp  move_gen.h
src/engine/: board.cpp  board.h  constants.h  eval.cpp  eval.h  main.cpp  move_gen.cpp  move_gen.h  psqt.cpp  psqt.h  search.cpp  search.h  time_man.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
src/gui/: main.cpp
src/gui/graphics/: renderer.cpp  renderer.h  shader.cpp  shader.h
src/gui/graphics/res/shaders/: Basic.shader
